--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/node": "^9.2.2",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/vercel": "^8.1.4",
     "@playform/compress": "^0.1.9",
