--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Cache bun dependencies
+      - name: Cache Bun dependencies
         uses: actions/cache@v4
         with:
           path: |
@@ -40,7 +40,7 @@ jobs:
       - name: Build Astro site
         run: bun run build
 
-      - name: Setup Pages
+      - name: Setup GitHub Pages environment
         uses: actions/configure-pages@v4
 
       - name: Upload build artifact
