--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "astro-theme-pure",
   "type": "module",
   "version": "4.0.3",
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
     "dev": "astro dev",
     "dev:check": "astro check --watch & astro dev",
@@ -22,14 +19,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/node": "^9.2.2",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/vercel": "^8.1.4",
     "@playform/compress": "^0.1.9",
+    "@unocss/preset-wind3": "^66.1.3",
     "@unocss/reset": "^66.1.3",
     "@waline/client": "^3.5.7",
     "astro": "^5.8.1",
-    "astro-pure": "workspace:*",
+    "astro-pure": "1.2.7",
     "katex": "^0.16.22",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
@@ -39,9 +36,6 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-    "@types/fontkit": "^2.0.8",
-    "@types/node": "^22.15.30",
-    "@types/sax": "^1.2.7",
     "eslint": "^9.28.0",
     "eslint-plugin-astro": "^1.3.1",
     "prettier": "^3.5.3",
