--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,13 @@
   "compilerOptions": {
     // Basic
     "allowJs": true,
-    "moduleResolution": "bundler",
-    "module": "ESNext",
-    "target": "ESNext",
+    // Building for a library
+    "declaration": true,
     // Code runs in the DOM
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": ["es2022", "dom", "dom.iterable"],
     // Others
     "baseUrl": ".",
     "strictNullChecks": true,
-    "skipLibCheck": true,
     // Paths
     "paths": {
       "@/assets/*": ["src/assets/*"],
@@ -23,19 +21,7 @@
       "@/plugins/*": ["src/plugins/*"],
       "@/pages/*": ["src/pages/*"],
       "@/types": ["src/types/index.ts"],
-      "@/site-config": ["src/site.config.ts"],
-      "astro-pure": ["packages/pure/index.ts"],
-      "astro-pure/*": ["packages/pure/*"],
-      "astro-pure/user": ["packages/pure/components/user/index.ts"],
-      "astro-pure/components/user": ["packages/pure/components/user/index.ts"],
-      "astro-pure/advanced": ["packages/pure/components/advanced/index.ts"],
-      "astro-pure/components/advanced": ["packages/pure/components/advanced/index.ts"],
-      "astro-pure/server": ["packages/pure/utils/server.ts"],
-      "astro-pure/components/pages": ["packages/pure/components/pages/index.ts"],
-      "astro-pure/components/basic": ["packages/pure/components/basic/index.ts"],
-      "astro-pure/utils": ["packages/pure/utils/index.ts"],
-      "astro-pure/types": ["packages/pure/types/index.ts"],
-      "astro-pure/libs": ["packages/pure/libs/index.ts"]
+      "@/site-config": ["src/site.config.ts"]
     }
   },
   "exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist", "public/scripts/*", "test/*"]
