--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,14 @@
       "@/site-config": ["src/site.config.ts"]
     }
   },
-  "exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist", "public/scripts/*", "test/*"]
+  "exclude": [
+    "node_modules",
+    "**/node_modules/*",
+    ".vscode",
+    "dist",
+    "public/scripts/*",
+    "test/*",
+    "src/content/blog/how-to-communicate-with-ai.md",
+    "src/pages/post/[...id].astro"
+  ]
 }
