--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "astro": "^5.12.0",
     "astro-pure": "1.3.4",
     "katex": "^0.16.22",
+    "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "sharp": "^0.34.3",
