--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "declaration": true,
     // Code runs in the DOM
     "lib": ["es2022", "dom", "dom.iterable"],
+    // Type Imports
+    "verbatimModuleSyntax": true,
     // Others
     "baseUrl": ".",
     "strictNullChecks": true,
@@ -24,14 +26,5 @@
       "@/site-config": ["src/site.config.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*",
-    ".vscode",
-    "dist",
-    "public/scripts/*",
-    "test/*",
-    "src/content/blog/how-to-communicate-with-ai.md",
-    "src/pages/post/[...id].astro"
-  ]
+  "exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist", "public/scripts/*", "test/*"]
 }
