--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@astrojs/vercel": "^8.0.4",
     "@playform/compress": "^0.2.0",
     "@waline/client": "^3.6.0",
-    "astro": "^5.12.0",
-    "astro-pure": "1.3.4",
+    "astro": "5.12.0",
+    "astro-pure": "^1.3.6",
     "katex": "^0.16.22",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
